tests/errors/format-float-freestanding.ari
fn main() -> i64 {
  println("value={:.1}", 1.25f64);
  return 0;
}
